--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -1,5 +1,5 @@
 #particles-js {
-  background: $main;
+  background-image: "header.jpg";
   display: flex;
   vertical-align: bottom;
   min-height: 100vh;
