Lots of changes

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,4 +1,4 @@
 <div class="user-details">
-  <h1>Hi, I'm Cheyenne.</h1>
-  <p>{{ site.user_description }}</p>
+  <h1>Hi there! I'm Cheyenne.</h1>
+  <p>{{ site.user_description }} I was born on the bustling tropical island nation of Singapore and raised in the placid praries of Leduc, Alberta. I was also a <a href="https://en.wikipedia.org/wiki/Cheyenne_Goh">short track speed skater</a> in a past life.</p>
 </div>
