--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,6 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat|Montserrat+Alternates|Raleway');
-@import url('https://fonts.googleapis.com/css?family=Fredericka+the+Great|Josefin+Slab|Antic+Slab');
-
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa&family=Montserrat&display=swap');
 * {
     -webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
@@ -12,8 +10,7 @@ body {
     font-size: 100%;
     line-height: 1.5;
     color: #555;
-
-    font-family: 'Antic Slab', serif;
+    font-family: 'Montserrat', sans-serif;
     font-weight: 400;
 }
 article, aside, figcaption, figure, footer, header, nav, section {
