perhaps am dumb

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,7 +3,9 @@
 <html lang="en">
   {% include head.html %}
   <body>
-        {{ content }}
-      {% include footer.html %}
+    <section id="content">
+      {{ content }}
+    </section>
+    {% include footer.html %}
   </body>
 </html>
