--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,9 @@
       <section id="about">
         {% include about.html %}
       </section>
+      <section id="content">
         {{ content }}
+      </section>
       {% include footer.html %}
   </body>
 </html>
