--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer">
-    <p>&copy; 2021 {{ site.username }}</p>
+    <p>&copy; 2021 {{ site.username }}. <a href="/credits/"></a>Credits.</p>
     
 </footer>
 <script src="//cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
