--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -8,5 +8,14 @@
     text-decoration: none;
     margin: 0;
     color: $sec;
+    &:hover{
+      color: $sec;
+    }
+    &:active {
+      color: $sec;
+    }
+    &:visited {
+      color: $sec;
+    }
   }
 }
