--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -58,3 +58,111 @@ a {
         color: $main;
     }
 }
+
+.videoWrapper {
+    position: relative;
+    padding-bottom: 56.25%;
+    height: 0;
+    @media only screen and (min-width:$cut){
+        padding-bottom: 42.1875%;
+    }
+}
+.videoWrapper iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    @media only screen and (min-width:$cut){
+        width: 75%;
+        height: 100%;
+    }
+}
+
+.digitalDashboardSlide {
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+    padding-bottom: 62.6%;
+    @media only screen and (min-width:$cut){
+        width: 75%;
+        padding-bottom: 46.875%;
+    }
+}
+.digitalDashboardSlide img {
+    position: absolute;
+    animation: digitalDashboardSlide 15s infinite;
+    opacity: 0;
+    width: 100%;
+    height: auto;
+}
+@keyframes digitalDashboardSlide {
+    0% {
+        opacity: 1;
+    }
+    33% {
+        opacity: 1;
+    }
+    43% {
+        opacity: 0;
+    }
+    90% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+.digitalDashboardSlide img:nth-child(1) {
+    animation-delay: -15s;
+}
+.digitalDashboardSlide img:nth-child(2) {
+    animation-delay: -10s;
+}
+.digitalDashboardSlide img:nth-child(3) {
+    animation-delay: -5s;
+}
+
+.athleticSlide {
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+    padding-bottom: 66.6667%;
+    @media only screen and (min-width:$cut){
+        width: 75%;
+        padding-bottom: 50%;
+        padding-left: 40px;
+    }
+}
+.athleticSlide img {
+    position: absolute;
+    animation: athleticSlide 10s infinite;
+    opacity: 0;
+    width: 100%;
+    height: auto;
+}
+@keyframes athleticSlide {
+    0% {
+        opacity: 1;
+    }
+    50% {
+        opacity: 1;
+    }
+    60% {
+        opacity: 0;
+    }
+    90% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+.athleticSlide img:nth-child(1) {
+    animation-delay: -10s;
+}
+.athleticSlide img:nth-child(2) {
+    animation-delay: -5s;
+}
