--- a/src/styles/_content.scss
+++ b/src/styles/_content.scss
@@ -2,6 +2,7 @@
   width: 90%;
   margin: 0 auto;
   max-width: 960px;
+  font-weight: 400;
   @media only screen and (min-width: $cut) {
     width: 80%;
   }
