--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -138,7 +138,7 @@ a {
 }
 .athleticSlide img {
     position: absolute;
-    animation: athleticSlide 10s infinite;
+    animation: athleticSlide 15s infinite;
     opacity: 0;
     width: 100%;
     height: auto;
@@ -147,10 +147,10 @@ a {
     0% {
         opacity: 1;
     }
-    50% {
+    33% {
         opacity: 1;
     }
-    60% {
+    43% {
         opacity: 0;
     }
     90% {
@@ -161,8 +161,11 @@ a {
     }
 }
 .athleticSlide img:nth-child(1) {
-    animation-delay: -10s;
+    animation-delay: -15s;
 }
 .athleticSlide img:nth-child(2) {
+    animation-delay: -10s;
+}
+.athleticSlide img:nth-child(3) {
     animation-delay: -5s;
 }
