--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3364,6 +3364,44 @@ a {
       width: 75%;
       height: 100%; } }
 
+.estatesSlide {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  padding-bottom: 78%; }
+  @media only screen and (min-width: 768px) {
+    .estatesSlide {
+      width: 75%;
+      padding-bottom: 58.5%; } }
+
+.estatesSlide img {
+  position: absolute;
+  animation: estatesSlide 15s infinite;
+  opacity: 0;
+  width: 100%;
+  height: auto; }
+
+@keyframes estatesSlide {
+  0% {
+    opacity: 1; }
+  33% {
+    opacity: 1; }
+  43% {
+    opacity: 0; }
+  90% {
+    opacity: 0; }
+  100% {
+    opacity: 1; } }
+.estatesSlide img:nth-child(1) {
+  animation-delay: -15s; }
+
+.estatesSlide img:nth-child(2) {
+  animation-delay: -10s; }
+
+.estatesSlide img:nth-child(3) {
+  animation-delay: -5s; }
+
 .digitalDashboardSlide {
   position: relative;
   overflow: hidden;
