--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,5 +1,6 @@
 <div class="user-details">
   <h1>Hi there! I'm Cheyenne.</h1>
-  <p>{{ site.user_description }} Currently, I am doing a 16-month internship work term at AMD. I was born on the bustling tropical island of Singapore and raised on the placid prairies of Leduc, Alberta. I was also a <a href="https://en.wikipedia.org/wiki/Cheyenne_Goh" target="_blank">short track speed skater</a> in a past life.</p>
-  <p><b><a href="/assets/CheyenneGohResume03-01-2023.pdf" target="_blank">Resume</a> (PDF)</p>
+  <img src="/assets/images/portrait.jpg" class="portrait">
+  <p>{{ site.user_description }} I was born on the bustling tropical island of Singapore and raised on the placid prairies of Leduc, Alberta, Canada. I was also a <a href="https://en.wikipedia.org/wiki/Cheyenne_Goh" target="_blank">short track speed skater</a> in a past life.</p>
+  <p><b><a href="/assets/CheyenneGohResume06-01-2024.pdf" target="_blank">Resume</a> (NA) / <a href="/assets/CheyenneGohCV06-01-2024.pdf" target="_blank">CV</a> (EU)</b></p>
 </div>
