--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
         <span class="site-description">{{ site.user_title }}</span>
       </h1>
       <div class="header-icons">
-        <a aria-label="Send email" href="mailto:cheyennegoh@shaw.ca"><i class="icon fa fa-envelope"></i></a>
+        <a aria-label="Send email" href="mailto:cheyenne@cheyennegoh.com"><i class="icon fa fa-envelope"></i></a>
         <a aria-label="My Instagram" target="_blank" href="https://www.instagram.com/cheyennegoh/"><i class="icon fa fa-instagram" aria-hidden="true"></i></a>
         <a aria-label="My Facebook" target="_blank" href="https://www.facebook.com/goh.cheyenne/"><i class="icon fa fa-facebook" aria-hidden="true"></i></a>
         <a aria-label="My LinkedIn" target="_blank" href="https://www.linkedin.com/in/cheyenne-goh/"><i class="icon fa fa-linkedin-square" aria-hidden="true"></i></a>
