--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -43,6 +43,14 @@ p, figure {
 a img {
     border: none;
 }
+img {
+    width: 100%;
+    height: auto;
+    @media only screen and (min-width:$cut){
+        width: 75%;
+    }
+
+}
 sup, sub {
     line-height: 0;
 }
@@ -59,6 +67,13 @@ a {
     }
 }
 
+.portrait {
+    width: 75%;
+    height: auto;
+    @media only screen and (min-width:$cut){
+        width: 50%;
+    }
+}
 .videoWrapper {
     position: relative;
     padding-bottom: 56.25%;
@@ -93,12 +108,16 @@ a {
 .estatesSlide img {
     position: absolute;
     animation: estatesSlide 15s infinite;
+    animation-timing-function: ease-in-out;
     opacity: 0;
     width: 100%;
     height: auto;
 }
 @keyframes estatesSlide {
     0% {
+        opacity: 0;
+    }
+    10% {
         opacity: 1;
     }
     33% {
@@ -106,12 +125,6 @@ a {
     }
     43% {
         opacity: 0;
-    }
-    90% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
     }
 }
 .estatesSlide img:nth-child(1) {
@@ -138,12 +151,16 @@ a {
 .digitalDashboardSlide img {
     position: absolute;
     animation: digitalDashboardSlide 15s infinite;
+    animation-timing-function: ease-in-out;
     opacity: 0;
     width: 100%;
     height: auto;
 }
 @keyframes digitalDashboardSlide {
     0% {
+        opacity: 0;
+    }
+    10% {
         opacity: 1;
     }
     33% {
@@ -151,12 +168,6 @@ a {
     }
     43% {
         opacity: 0;
-    }
-    90% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
     }
 }
 .digitalDashboardSlide img:nth-child(1) {
@@ -184,12 +195,16 @@ a {
 .athleticSlide img {
     position: absolute;
     animation: athleticSlide 15s infinite;
+    animation-timing-function: ease-in-out;
     opacity: 0;
     width: 100%;
     height: auto;
 }
 @keyframes athleticSlide {
     0% {
+        opacity: 0;
+    }
+    10% {
         opacity: 1;
     }
     33% {
@@ -197,12 +212,6 @@ a {
     }
     43% {
         opacity: 0;
-    }
-    90% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
     }
 }
 .athleticSlide img:nth-child(1) {
