--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -44,8 +44,11 @@ a img {
     border: none;
 }
 img {
+    display: block;
     width: 100%;
     height: auto;
+    margin-left: auto;
+    margin-right: auto;
     @media only screen and (min-width:$cut){
         width: 75%;
     }
@@ -75,31 +78,24 @@ a {
     }
 }
 .videoWrapper {
-    position: relative;
-    padding-bottom: 56.25%;
-    height: 0;
-    @media only screen and (min-width:$cut){
-        padding-bottom: 42.1875%;
-    }
+    text-align: center;
 }
 .videoWrapper iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
     width: 100%;
-    height: 100%;
     @media only screen and (min-width:$cut){
         width: 75%;
-        height: 100%;
     }
+    height:unset;
+    aspect-ratio: 16 / 9;
 }
 
 .estatesSlide {
     position: relative;
-    overflow: hidden;
     width: 100%;
     height: 100%;
     padding-bottom: 71.7503%;
+    margin-left: auto;
+    margin-right: auto;
     @media only screen and (min-width:$cut){
         width: 75%;
         padding-bottom: 53.8127%;
@@ -139,10 +135,11 @@ a {
 
 .digitalDashboardSlide {
     position: relative;
-    overflow: hidden;
     width: 100%;
     height: 100%;
     padding-bottom: 62.6%;
+    margin-left: auto;
+    margin-right: auto;
     @media only screen and (min-width:$cut){
         width: 75%;
         padding-bottom: 46.875%;
@@ -182,14 +179,14 @@ a {
 
 .athleticSlide {
     position: relative;
-    overflow: hidden;
     width: 100%;
     height: 100%;
     padding-bottom: 66.6667%;
+    margin-left: auto;
+    margin-right: auto;
     @media only screen and (min-width:$cut){
         width: 75%;
         padding-bottom: 50%;
-        padding-left: 40px;
     }
 }
 .athleticSlide img {
